Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-12716

mmp file not updated when changes are made to .pro file.

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 4.7.0
    • 4.7.0
    • Build tools: qmake
    • None
    • windows XP
    • 142ce4d38094f1588b04758a6f9ff6787a784fe3

    Description

      If I update the .pro file and click the build all button, I expect it to rebuild the .mmp file. It does not. For example if I add webkit to the QT macro

      QT += core gui webkit

      the associated include files are not added to the mmp file.

      One can workaround this problem by invoking qmake from the command line.

      -jk

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            e0348803 Miikka Heikkinen
            johnk John Kern
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes