Make bld.inf target in Symbian mkspecs to depend on .pro file

Changes to .pro file weren't previously noticed and therefore
qmake wasn't rerun. Qmake command itself was also incorrect.

Task-number: QTBUG-12716
Reviewed-by: Shane Kearns
(cherry picked from commit 142ce4d38094f1588b04758a6f9ff6787a784fe3)